Enabled the change in r804413 (Java 2 security) for Windows as well.